--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="Ana de Carvalho é escritora e atriz amadora, com quatro obras já lançadas e com participação num filme. Nicajoaninha, Sete Dias Sete Contos, Ódio de Morte, 
+  O Destino Assim o Quis "
+    />
     <title>Ana de Carvalho</title>
   </head>
   <body>
