--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
       name="google-site-verification"
       content="yjDCvjPJPYh6eP6n2TFmFpLNJL89O8iDb1BuG57a_Hs"
     />
-    <link rel="icon" href="./src/images/Ana.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,7 +20,7 @@
       content="Ana de Carvalho é escritora e atriz amadora, com quatro obras já lançadas e com participação num filme. Nicajoaninha, Sete Dias Sete Contos, Ódio de Morte, 
   O Destino Assim o Quis "
     />
-    <title>Ana de Carvalho</title>
+    <title>.</title>
   </head>
   <body>
     <div id="root"></div>
